generated/FlyScriptParser.cpp

// Generated from FlyScriptParser.g4 by ANTLR 4.11.1


#include "FlyScriptParserVisitor.h"

#include "FlyScriptParser.h"


using namespace antlrcpp;
using namespace beingyi;

using namespace antlr4;

namespace {

struct FlyScriptParserStaticData final {
  FlyScriptParserStaticData(std::vector<std::string> ruleNames,
                        std::vector<std::string> literalNames,
                        std::vector<std::string> symbolicNames)
      : ruleNames(std::move(ruleNames)), literalNames(std::move(literalNames)),
        symbolicNames(std::move(symbolicNames)),
        vocabulary(this->literalNames, this->symbolicNames) {}

  FlyScriptParserStaticData(const FlyScriptParserStaticData&) = delete;
  FlyScriptParserStaticData(FlyScriptParserStaticData&&) = delete;
  FlyScriptParserStaticData& operator=(const FlyScriptParserStaticData&) = delete;
  FlyScriptParserStaticData& operator=(FlyScriptParserStaticData&&) = delete;

  std::vector<antlr4::dfa::DFA> decisionToDFA;
  antlr4::atn::PredictionContextCache sharedContextCache;
  const std::vector<std::string> ruleNames;
  const std::vector<std::string> literalNames;
  const std::vector<std::string> symbolicNames;
  const antlr4::dfa::Vocabulary vocabulary;
  antlr4::atn::SerializedATNView serializedATN;
  std::unique_ptr<antlr4::atn::ATN> atn;
};

::antlr4::internal::OnceFlag flyscriptparserParserOnceFlag;
FlyScriptParserStaticData *flyscriptparserParserStaticData = nullptr;

void flyscriptparserParserInitialize() {
  assert(flyscriptparserParserStaticData == nullptr);
  auto staticData = std::make_unique<FlyScriptParserStaticData>(
    std::vector<std::string>{
      "file", "type", "field", "function", "functionParameters", "functionParameter", 
      "block", "stmt", "judgeSymbol", "expr", "exprList", "stringContents"
    },
    std::vector<std::string>{
      "", "'void'", "'string'", "'float'", "'int'", "'boolean'", "'if'", 
      "'then'", "'else'", "'while'", "'break'", "'return'", "'true'", "'false'", 
      "'{'", "'}'", "'['", "']'", "'+'", "'-'", "'*'", "'/'", "'!'", "'='", 
      "'=='", "'!='", "'>='", "'>'", "'<='", "'<'", "'||'", "'&&'", "'|'", 
      "'&'", "','", "';'", "", "", "", "", "", "'('", "')'", "", "'\\('"
    },
    std::vector<std::string>{
      "", "Type_void", "Type_string", "Type_float", "Type_int", "Type_boolean", 
      "K_If", "K_Then", "K_Else", "K_While", "K_Break", "K_Return", "Kv_True", 
      "Kv_False", "LCurlyPar", "RCurlyPar", "LSquarePar", "RSquarePar", 
      "PLUS", "SUBTRACT", "MULTIPLY", "DIVIDE", "NOT", "AssignEqual", "JudgeEqual", 
      "NotEqual", "GreaterOrEqual", "Greater", "LesserOrEqual", "Lesser", 
      "OrBoolean", "AndBoolean", "Or", "And", "Comma", "Semicolon", "ID", 
      "INT", "WS", "SL_COMMENT", "DQUOTE", "LPAR", "RPAR", "TEXT", "BACKSLASH_PAREN", 
      "ESCAPE_SEQUENCE"
    }
  );
  staticData->serializedATN = antlr4::atn::SerializedATNView(serializedATNSegment, sizeof(serializedATNSegment) / sizeof(serializedATNSegment[0]));

  antlr4::atn::ATNDeserializer deserializer;
  staticData->atn = deserializer.deserialize(staticData->serializedATN);

  const size_t count = staticData->atn->getNumberOfDecisions();
  staticData->decisionToDFA.reserve(count);
  for (size_t i = 0; i < count; i++) { 
    staticData->decisionToDFA.emplace_back(staticData->atn->getDecisionState(i), i);
  }
  flyscriptparserParserStaticData = staticData.release();
}

}

FlyScriptParser::FlyScriptParser(TokenStream *input) : FlyScriptParser(input, antlr4::atn::ParserATNSimulatorOptions()) {}

FlyScriptParser::FlyScriptParser(TokenStream *input, const antlr4::atn::ParserATNSimulatorOptions &options) : Parser(input) {
  FlyScriptParser::initialize();
  _interpreter = new atn::ParserATNSimulator(this, *flyscriptparserParserStaticData->atn, flyscriptparserParserStaticData->decisionToDFA, flyscriptparserParserStaticData->sharedContextCache, options);
}

FlyScriptParser::~FlyScriptParser() {
  delete _interpreter;
}

const atn::ATN& FlyScriptParser::getATN() const {
  return *flyscriptparserParserStaticData->atn;
}

std::string FlyScriptParser::getGrammarFileName() const {
  return "FlyScriptParser.g4";
}

const std::vector<std::string>& FlyScriptParser::getRuleNames() const {
  return flyscriptparserParserStaticData->ruleNames;
}

const dfa::Vocabulary& FlyScriptParser::getVocabulary() const {
  return flyscriptparserParserStaticData->vocabulary;
}

antlr4::atn::SerializedATNView FlyScriptParser::getSerializedATN() const {
  return flyscriptparserParserStaticData->serializedATN;
}


//----------------- FileContext ------------------------------------------------------------------

FlyScriptParser::FileContext::FileContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<FlyScriptParser::FunctionContext *> FlyScriptParser::FileContext::function() {
  return getRuleContexts<FlyScriptParser::FunctionContext>();
}

FlyScriptParser::FunctionContext* FlyScriptParser::FileContext::function(size_t i) {
  return getRuleContext<FlyScriptParser::FunctionContext>(i);
}

std::vector<FlyScriptParser::FieldContext *> FlyScriptParser::FileContext::field() {
  return getRuleContexts<FlyScriptParser::FieldContext>();
}

FlyScriptParser::FieldContext* FlyScriptParser::FileContext::field(size_t i) {
  return getRuleContext<FlyScriptParser::FieldContext>(i);
}

std::vector<FlyScriptParser::StmtContext *> FlyScriptParser::FileContext::stmt() {
  return getRuleContexts<FlyScriptParser::StmtContext>();
}

FlyScriptParser::StmtContext* FlyScriptParser::FileContext::stmt(size_t i) {
  return getRuleContext<FlyScriptParser::StmtContext>(i);
}


size_t FlyScriptParser::FileContext::getRuleIndex() const {
  return FlyScriptParser::RuleFile;
}


std::any FlyScriptParser::FileContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<FlyScriptParserVisitor*>(visitor))
    return parserVisitor->visitFile(this);
  else
    return visitor->visitChildren(this);
}

FlyScriptParser::FileContext* FlyScriptParser::file() {
  FileContext *_localctx = _tracker.createInstance<FileContext>(_ctx, getState());
  enterRule(_localctx, 0, FlyScriptParser::RuleFile);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(27); 
    _errHandler->sync(this);
    _la = _input->LA(1);
    do {
      setState(27);
      _errHandler->sync(this);
      switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 0, _ctx)) {
      case 1: {
        setState(24);
        function();
        break;
      }

      case 2: {
        setState(25);
        field();
        break;
      }

      case 3: {
        setState(26);
        stmt();
        break;
      }

      default:
        break;
      }
      setState(29); 
      _errHandler->sync(this);
      _la = _input->LA(1);
    } while (((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & 3504697540222) != 0);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- TypeContext ------------------------------------------------------------------

FlyScriptParser::TypeContext::TypeContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* FlyScriptParser::TypeContext::Type_void() {
  return getToken(FlyScriptParser::Type_void, 0);
}

tree::TerminalNode* FlyScriptParser::TypeContext::Type_string() {
  return getToken(FlyScriptParser::Type_string, 0);
}

tree::TerminalNode* FlyScriptParser::TypeContext::Type_float() {
  return getToken(FlyScriptParser::Type_float, 0);
}

tree::TerminalNode* FlyScriptParser::TypeContext::Type_int() {
  return getToken(FlyScriptParser::Type_int, 0);
}

tree::TerminalNode* FlyScriptParser::TypeContext::Type_boolean() {
  return getToken(FlyScriptParser::Type_boolean, 0);
}


size_t FlyScriptParser::TypeContext::getRuleIndex() const {
  return FlyScriptParser::RuleType;
}


std::any FlyScriptParser::TypeContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<FlyScriptParserVisitor*>(visitor))
    return parserVisitor->visitType(this);
  else
    return visitor->visitChildren(this);
}

FlyScriptParser::TypeContext* FlyScriptParser::type() {
  TypeContext *_localctx = _tracker.createInstance<TypeContext>(_ctx, getState());
  enterRule(_localctx, 2, FlyScriptParser::RuleType);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(31);
    _la = _input->LA(1);
    if (!(((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & 62) != 0)) {
    _errHandler->recoverInline(this);
    }
    else {
      _errHandler->reportMatch(this);
      consume();
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- FieldContext ------------------------------------------------------------------

FlyScriptParser::FieldContext::FieldContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

FlyScriptParser::TypeContext* FlyScriptParser::FieldContext::type() {
  return getRuleContext<FlyScriptParser::TypeContext>(0);
}

tree::TerminalNode* FlyScriptParser::FieldContext::ID() {
  return getToken(FlyScriptParser::ID, 0);
}

tree::TerminalNode* FlyScriptParser::FieldContext::Semicolon() {
  return getToken(FlyScriptParser::Semicolon, 0);
}

tree::TerminalNode* FlyScriptParser::FieldContext::AssignEqual() {
  return getToken(FlyScriptParser::AssignEqual, 0);
}

FlyScriptParser::ExprContext* FlyScriptParser::FieldContext::expr() {
  return getRuleContext<FlyScriptParser::ExprContext>(0);
}


size_t FlyScriptParser::FieldContext::getRuleIndex() const {
  return FlyScriptParser::RuleField;
}


std::any FlyScriptParser::FieldContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<FlyScriptParserVisitor*>(visitor))
    return parserVisitor->visitField(this);
  else
    return visitor->visitChildren(this);
}

FlyScriptParser::FieldContext* FlyScriptParser::field() {
  FieldContext *_localctx = _tracker.createInstance<FieldContext>(_ctx, getState());
  enterRule(_localctx, 4, FlyScriptParser::RuleField);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(33);
    type();
    setState(34);
    match(FlyScriptParser::ID);
    setState(37);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == FlyScriptParser::AssignEqual) {
      setState(35);
      match(FlyScriptParser::AssignEqual);
      setState(36);
      expr(0);
    }
    setState(39);
    match(FlyScriptParser::Semicolon);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- FunctionContext ------------------------------------------------------------------

FlyScriptParser::FunctionContext::FunctionContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

FlyScriptParser::TypeContext* FlyScriptParser::FunctionContext::type() {
  return getRuleContext<FlyScriptParser::TypeContext>(0);
}

tree::TerminalNode* FlyScriptParser::FunctionContext::ID() {
  return getToken(FlyScriptParser::ID, 0);
}

tree::TerminalNode* FlyScriptParser::FunctionContext::LPAR() {
  return getToken(FlyScriptParser::LPAR, 0);
}

tree::TerminalNode* FlyScriptParser::FunctionContext::RPAR() {
  return getToken(FlyScriptParser::RPAR, 0);
}

FlyScriptParser::BlockContext* FlyScriptParser::FunctionContext::block() {
  return getRuleContext<FlyScriptParser::BlockContext>(0);
}

FlyScriptParser::FunctionParametersContext* FlyScriptParser::FunctionContext::functionParameters() {
  return getRuleContext<FlyScriptParser::FunctionParametersContext>(0);
}


size_t FlyScriptParser::FunctionContext::getRuleIndex() const {
  return FlyScriptParser::RuleFunction;
}


std::any FlyScriptParser::FunctionContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<FlyScriptParserVisitor*>(visitor))
    return parserVisitor->visitFunction(this);
  else
    return visitor->visitChildren(this);
}

FlyScriptParser::FunctionContext* FlyScriptParser::function() {
  FunctionContext *_localctx = _tracker.createInstance<FunctionContext>(_ctx, getState());
  enterRule(_localctx, 6, FlyScriptParser::RuleFunction);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(41);
    type();
    setState(42);
    match(FlyScriptParser::ID);
    setState(43);
    match(FlyScriptParser::LPAR);
    setState(45);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & 62) != 0) {
      setState(44);
      functionParameters();
    }
    setState(47);
    match(FlyScriptParser::RPAR);
    setState(48);
    block();
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- FunctionParametersContext ------------------------------------------------------------------

FlyScriptParser::FunctionParametersContext::FunctionParametersContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<FlyScriptParser::FunctionParameterContext *> FlyScriptParser::FunctionParametersContext::functionParameter() {
  return getRuleContexts<FlyScriptParser::FunctionParameterContext>();
}

FlyScriptParser::FunctionParameterContext* FlyScriptParser::FunctionParametersContext::functionParameter(size_t i) {
  return getRuleContext<FlyScriptParser::FunctionParameterContext>(i);
}

std::vector<tree::TerminalNode *> FlyScriptParser::FunctionParametersContext::Comma() {
  return getTokens(FlyScriptParser::Comma);
}

tree::TerminalNode* FlyScriptParser::FunctionParametersContext::Comma(size_t i) {
  return getToken(FlyScriptParser::Comma, i);
}


size_t FlyScriptParser::FunctionParametersContext::getRuleIndex() const {
  return FlyScriptParser::RuleFunctionParameters;
}


std::any FlyScriptParser::FunctionParametersContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<FlyScriptParserVisitor*>(visitor))
    return parserVisitor->visitFunctionParameters(this);
  else
    return visitor->visitChildren(this);
}

FlyScriptParser::FunctionParametersContext* FlyScriptParser::functionParameters() {
  FunctionParametersContext *_localctx = _tracker.createInstance<FunctionParametersContext>(_ctx, getState());
  enterRule(_localctx, 8, FlyScriptParser::RuleFunctionParameters);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(50);
    functionParameter();
    setState(55);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while (_la == FlyScriptParser::Comma) {
      setState(51);
      match(FlyScriptParser::Comma);
      setState(52);
      functionParameter();
      setState(57);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- FunctionParameterContext ------------------------------------------------------------------

FlyScriptParser::FunctionParameterContext::FunctionParameterContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

FlyScriptParser::TypeContext* FlyScriptParser::FunctionParameterContext::type() {
  return getRuleContext<FlyScriptParser::TypeContext>(0);
}

tree::TerminalNode* FlyScriptParser::FunctionParameterContext::ID() {
  return getToken(FlyScriptParser::ID, 0);
}


size_t FlyScriptParser::FunctionParameterContext::getRuleIndex() const {
  return FlyScriptParser::RuleFunctionParameter;
}


std::any FlyScriptParser::FunctionParameterContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<FlyScriptParserVisitor*>(visitor))
    return parserVisitor->visitFunctionParameter(this);
  else
    return visitor->visitChildren(this);
}

FlyScriptParser::FunctionParameterContext* FlyScriptParser::functionParameter() {
  FunctionParameterContext *_localctx = _tracker.createInstance<FunctionParameterContext>(_ctx, getState());
  enterRule(_localctx, 10, FlyScriptParser::RuleFunctionParameter);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(58);
    type();
    setState(59);
    match(FlyScriptParser::ID);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- BlockContext ------------------------------------------------------------------

FlyScriptParser::BlockContext::BlockContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* FlyScriptParser::BlockContext::LCurlyPar() {
  return getToken(FlyScriptParser::LCurlyPar, 0);
}

tree::TerminalNode* FlyScriptParser::BlockContext::RCurlyPar() {
  return getToken(FlyScriptParser::RCurlyPar, 0);
}

std::vector<FlyScriptParser::StmtContext *> FlyScriptParser::BlockContext::stmt() {
  return getRuleContexts<FlyScriptParser::StmtContext>();
}

FlyScriptParser::StmtContext* FlyScriptParser::BlockContext::stmt(size_t i) {
  return getRuleContext<FlyScriptParser::StmtContext>(i);
}


size_t FlyScriptParser::BlockContext::getRuleIndex() const {
  return FlyScriptParser::RuleBlock;
}


std::any FlyScriptParser::BlockContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<FlyScriptParserVisitor*>(visitor))
    return parserVisitor->visitBlock(this);
  else
    return visitor->visitChildren(this);
}

FlyScriptParser::BlockContext* FlyScriptParser::block() {
  BlockContext *_localctx = _tracker.createInstance<BlockContext>(_ctx, getState());
  enterRule(_localctx, 12, FlyScriptParser::RuleBlock);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(61);
    match(FlyScriptParser::LCurlyPar);
    setState(65);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while (((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & 3504697540222) != 0) {
      setState(62);
      stmt();
      setState(67);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(68);
    match(FlyScriptParser::RCurlyPar);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- StmtContext ------------------------------------------------------------------

FlyScriptParser::StmtContext::StmtContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}


size_t FlyScriptParser::StmtContext::getRuleIndex() const {
  return FlyScriptParser::RuleStmt;
}

void FlyScriptParser::StmtContext::copyFrom(StmtContext *ctx) {
  ParserRuleContext::copyFrom(ctx);
}

//----------------- InvokeStmtContext ------------------------------------------------------------------

FlyScriptParser::ExprContext* FlyScriptParser::InvokeStmtContext::expr() {
  return getRuleContext<FlyScriptParser::ExprContext>(0);
}

tree::TerminalNode* FlyScriptParser::InvokeStmtContext::Semicolon() {
  return getToken(FlyScriptParser::Semicolon, 0);
}

FlyScriptParser::InvokeStmtContext::InvokeStmtContext(StmtContext *ctx) { copyFrom(ctx); }


std::any FlyScriptParser::InvokeStmtContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<FlyScriptParserVisitor*>(visitor))
    return parserVisitor->visitInvokeStmt(this);
  else
    return visitor->visitChildren(this);
}
//----------------- WhileStmtContext ------------------------------------------------------------------

tree::TerminalNode* FlyScriptParser::WhileStmtContext::K_While() {
  return getToken(FlyScriptParser::K_While, 0);
}

tree::TerminalNode* FlyScriptParser::WhileStmtContext::LPAR() {
  return getToken(FlyScriptParser::LPAR, 0);
}

FlyScriptParser::ExprContext* FlyScriptParser::WhileStmtContext::expr() {
  return getRuleContext<FlyScriptParser::ExprContext>(0);
}

tree::TerminalNode* FlyScriptParser::WhileStmtContext::RPAR() {
  return getToken(FlyScriptParser::RPAR, 0);
}

FlyScriptParser::BlockContext* FlyScriptParser::WhileStmtContext::block() {
  return getRuleContext<FlyScriptParser::BlockContext>(0);
}

FlyScriptParser::WhileStmtContext::WhileStmtContext(StmtContext *ctx) { copyFrom(ctx); }


std::any FlyScriptParser::WhileStmtContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<FlyScriptParserVisitor*>(visitor))
    return parserVisitor->visitWhileStmt(this);
  else
    return visitor->visitChildren(this);
}
//----------------- CodeBlockContext ------------------------------------------------------------------

FlyScriptParser::BlockContext* FlyScriptParser::CodeBlockContext::block() {
  return getRuleContext<FlyScriptParser::BlockContext>(0);
}

FlyScriptParser::CodeBlockContext::CodeBlockContext(StmtContext *ctx) { copyFrom(ctx); }


std::any FlyScriptParser::CodeBlockContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<FlyScriptParserVisitor*>(visitor))
    return parserVisitor->visitCodeBlock(this);
  else
    return visitor->visitChildren(this);
}
//----------------- IfElseStmtContext ------------------------------------------------------------------

tree::TerminalNode* FlyScriptParser::IfElseStmtContext::K_If() {
  return getToken(FlyScriptParser::K_If, 0);
}

tree::TerminalNode* FlyScriptParser::IfElseStmtContext::LPAR() {
  return getToken(FlyScriptParser::LPAR, 0);
}

FlyScriptParser::ExprContext* FlyScriptParser::IfElseStmtContext::expr() {
  return getRuleContext<FlyScriptParser::ExprContext>(0);
}

tree::TerminalNode* FlyScriptParser::IfElseStmtContext::RPAR() {
  return getToken(FlyScriptParser::RPAR, 0);
}

std::vector<FlyScriptParser::BlockContext *> FlyScriptParser::IfElseStmtContext::block() {
  return getRuleContexts<FlyScriptParser::BlockContext>();
}

FlyScriptParser::BlockContext* FlyScriptParser::IfElseStmtContext::block(size_t i) {
  return getRuleContext<FlyScriptParser::BlockContext>(i);
}

tree::TerminalNode* FlyScriptParser::IfElseStmtContext::K_Else() {
  return getToken(FlyScriptParser::K_Else, 0);
}

FlyScriptParser::IfElseStmtContext::IfElseStmtContext(StmtContext *ctx) { copyFrom(ctx); }


std::any FlyScriptParser::IfElseStmtContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<FlyScriptParserVisitor*>(visitor))
    return parserVisitor->visitIfElseStmt(this);
  else
    return visitor->visitChildren(this);
}
//----------------- BreakStmtContext ------------------------------------------------------------------

tree::TerminalNode* FlyScriptParser::BreakStmtContext::K_Break() {
  return getToken(FlyScriptParser::K_Break, 0);
}

tree::TerminalNode* FlyScriptParser::BreakStmtContext::Semicolon() {
  return getToken(FlyScriptParser::Semicolon, 0);
}

FlyScriptParser::BreakStmtContext::BreakStmtContext(StmtContext *ctx) { copyFrom(ctx); }


std::any FlyScriptParser::BreakStmtContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<FlyScriptParserVisitor*>(visitor))
    return parserVisitor->visitBreakStmt(this);
  else
    return visitor->visitChildren(this);
}
//----------------- AssignStmtContext ------------------------------------------------------------------

std::vector<FlyScriptParser::ExprContext *> FlyScriptParser::AssignStmtContext::expr() {
  return getRuleContexts<FlyScriptParser::ExprContext>();
}

FlyScriptParser::ExprContext* FlyScriptParser::AssignStmtContext::expr(size_t i) {
  return getRuleContext<FlyScriptParser::ExprContext>(i);
}

tree::TerminalNode* FlyScriptParser::AssignStmtContext::AssignEqual() {
  return getToken(FlyScriptParser::AssignEqual, 0);
}

tree::TerminalNode* FlyScriptParser::AssignStmtContext::Semicolon() {
  return getToken(FlyScriptParser::Semicolon, 0);
}

FlyScriptParser::AssignStmtContext::AssignStmtContext(StmtContext *ctx) { copyFrom(ctx); }


std::any FlyScriptParser::AssignStmtContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<FlyScriptParserVisitor*>(visitor))
    return parserVisitor->visitAssignStmt(this);
  else
    return visitor->visitChildren(this);
}
//----------------- ReturnStmtContext ------------------------------------------------------------------

tree::TerminalNode* FlyScriptParser::ReturnStmtContext::K_Return() {
  return getToken(FlyScriptParser::K_Return, 0);
}

tree::TerminalNode* FlyScriptParser::ReturnStmtContext::Semicolon() {
  return getToken(FlyScriptParser::Semicolon, 0);
}

FlyScriptParser::ExprContext* FlyScriptParser::ReturnStmtContext::expr() {
  return getRuleContext<FlyScriptParser::ExprContext>(0);
}

FlyScriptParser::ReturnStmtContext::ReturnStmtContext(StmtContext *ctx) { copyFrom(ctx); }


std::any FlyScriptParser::ReturnStmtContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<FlyScriptParserVisitor*>(visitor))
    return parserVisitor->visitReturnStmt(this);
  else
    return visitor->visitChildren(this);
}
//----------------- VarStmtContext ------------------------------------------------------------------

FlyScriptParser::TypeContext* FlyScriptParser::VarStmtContext::type() {
  return getRuleContext<FlyScriptParser::TypeContext>(0);
}

tree::TerminalNode* FlyScriptParser::VarStmtContext::ID() {
  return getToken(FlyScriptParser::ID, 0);
}

tree::TerminalNode* FlyScriptParser::VarStmtContext::Semicolon() {
  return getToken(FlyScriptParser::Semicolon, 0);
}

tree::TerminalNode* FlyScriptParser::VarStmtContext::AssignEqual() {
  return getToken(FlyScriptParser::AssignEqual, 0);
}

FlyScriptParser::ExprContext* FlyScriptParser::VarStmtContext::expr() {
  return getRuleContext<FlyScriptParser::ExprContext>(0);
}

FlyScriptParser::VarStmtContext::VarStmtContext(StmtContext *ctx) { copyFrom(ctx); }


std::any FlyScriptParser::VarStmtContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<FlyScriptParserVisitor*>(visitor))
    return parserVisitor->visitVarStmt(this);
  else
    return visitor->visitChildren(this);
}
FlyScriptParser::StmtContext* FlyScriptParser::stmt() {
  StmtContext *_localctx = _tracker.createInstance<StmtContext>(_ctx, getState());
  enterRule(_localctx, 14, FlyScriptParser::RuleStmt);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    setState(109);
    _errHandler->sync(this);
    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 9, _ctx)) {
    case 1: {
      _localctx = _tracker.createInstance<FlyScriptParser::CodeBlockContext>(_localctx);
      enterOuterAlt(_localctx, 1);
      setState(70);
      block();
      break;
    }

    case 2: {
      _localctx = _tracker.createInstance<FlyScriptParser::VarStmtContext>(_localctx);
      enterOuterAlt(_localctx, 2);
      setState(71);
      type();
      setState(72);
      match(FlyScriptParser::ID);
      setState(75);
      _errHandler->sync(this);

      _la = _input->LA(1);
      if (_la == FlyScriptParser::AssignEqual) {
        setState(73);
        match(FlyScriptParser::AssignEqual);
        setState(74);
        expr(0);
      }
      setState(77);
      match(FlyScriptParser::Semicolon);
      break;
    }

    case 3: {
      _localctx = _tracker.createInstance<FlyScriptParser::IfElseStmtContext>(_localctx);
      enterOuterAlt(_localctx, 3);
      setState(79);
      match(FlyScriptParser::K_If);
      setState(80);
      match(FlyScriptParser::LPAR);
      setState(81);
      expr(0);
      setState(82);
      match(FlyScriptParser::RPAR);
      setState(83);
      block();
      setState(86);
      _errHandler->sync(this);

      _la = _input->LA(1);
      if (_la == FlyScriptParser::K_Else) {
        setState(84);
        match(FlyScriptParser::K_Else);
        setState(85);
        block();
      }
      break;
    }
